# organizer_project

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  mypy.ini  organizer3.26.py  organizer3.29.py  pyproject.toml  requirements-dev.txt  requirements.txt  sqlscript.py
.github/workflows/: ci.yml
config/: settings.py
core/: duplicate_finder.py  file_scanner.py
docs/: lint-baseline.md  lint-execution-policy.md  workflow-walkthrough.md
migrations/: env.py
migrations/versions/: 5663b07ada03_add_bit_depth_lufs_columns.py  60ec2f724e78_check_schema_sync.py  a39924643879_create_files_table.py  a970f5188eb3_add_audio_feature_columns.py  (+1 more)
models/: file_model.py
organizer/: organizer.py  tag_utils.py  utils.py
services/: advanced_analysis_worker.py  analysis_engine.py  auto_tagger.py  cache_manager.py  database_manager.py  duplicate_finder.py  feature_worker_process.py  file_scanner.py  hash_worker.py  schema.py  spectrogram_plotter.py  spectrogram_service.py  waveform_plotter.py
tests/: __init__.py  conftest.py  test_advanced_analysis.py  test_audio_processor.py  test_auto_tagger.py  test_cache_manager.py  test_config_settings.py  test_controller.py  test_database_manager.py  test_db_schema_sync.py  test_duplicate_finder.py  test_file_filter_proxy.py  test_file_model.py  test_file_scanner.py  test_helpers.py  test_organizer.py  test_spectrogram_service.py  test_ui_main_window.py  test_utils.py  test_waveform_plotter.py
ui/: controllers.py  main_window.py
ui/dialogs/: feature_view_dialog.py  (+5 more)
utils/: cache_manager.py  helpers.py
