[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.poetry.dev-dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.1"
pytest = "^7.2"
pytest-qt = "^4.1.3"
pre-commit = "^3.4.0"
